# para

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Package.swift  README.md  bugs.md  build-menubar.sh  install.sh  wishList.org
ParaKit/: ParaEnvironment.swift  ParaError.swift  ParaFileSystem.swift  ParaItem.swift  ParaManager.swift  ParaServerManager.swift  ParaSettings.swift  ParaVersion.swift
ParaMenuBar/: FileWatcher.swift  MCPServerMonitor.swift  MenuBarManager.swift  MenuBuilder.swift  NewItemView.swift  ParaMenuBarApp.swift  SettingsView.swift
para/: ParaCore.swift  main.swift
para-mcp/: com.para.cloudflare-tunnel.plist  com.para.mcp-server.plist  pyproject.toml  requirements.txt
para-mcp/scripts/: export-agenda.sh  launchd-server.sh  launchd-wrapper.sh  setup-tunnel.sh  start-all.sh  start-quick-tunnel.sh  start-server-http.sh  start-server.sh  start-tunnel.sh
para-mcp/src/: __init__.py  server.py
para-mcp/tests/: test_server.py
para.xcodeproj/: project.pbxproj
para.xcodeproj/xcshareddata/xcschemes/: para.xcscheme  paraTests.xcscheme
para.xcodeproj/xcuserdata/ianuser.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
para.xcodeproj/xcuserdata/ianuser.xcuserdatad/xcschemes/: xcschememanagement.plist
paraTests/: paraTests.swift
